--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
   <header>
     <label for="checkbox_toggle" id="hamburger">&#9776;</label>
-    <h1 id="logo_name">CRAZY TIMES TIE DYE</h1>
-    <h1 id="mobile_name">CTTD</h1>  
+    <h1 id="logo_name">crazy times tie dye</h1>
+    <h1 id="mobile_name">cttd</h1>  
     <nav id="desktop_nav">
       <ul id="desktop_menu">
         <li>
